--- a/functions/package.json
+++ b/functions/package.json
@@ -4,6 +4,8 @@
   "description": "Serverless functions for McLemore Auction payment form",
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
     "nodemailer": "^6.9.7"
   }
 }
