Fix Netlify build configuration by adding empty command parameter

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   publish = "/"
   functions = "functions"
+  command = ""
 
 # Redirect all URLs to index.html for client-side routing
 [[redirects]]
