--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   publish = "/"
   functions = "functions"
-  command = ""
+  command = "npm install"
 
 # Add the Netlify Functions Install Core plugin
 [[plugins]]
