--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "McLemore Auction payment form system",
   "main": "index.html",
   "dependencies": {
-    "axios": "^1.6.2",
-    "cheerio": "^1.0.0-rc.12",
+    "axios": "^1.8.4",
+    "cheerio": "^1.0.0",
     "nodemailer": "^6.9.7"
   },
   "scripts": {
