--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
-    "nodemailer": "^6.9.7"
+    "dotenv": "^16.4.7",
+    "nodemailer": "^6.10.0"
   },
   "scripts": {
     "start": "netlify dev"
