--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^1.6.2",
+    "axios-cookiejar-support": "^4.0.7",
     "cheerio": "^1.0.0-rc.12",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "tough-cookie": "^4.1.3"
   }
 }
