--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.html",
   "dependencies": {
     "axios": "^1.8.4",
+    "axios-cookiejar-support": "^5.0.5",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "tough-cookie": "^5.1.2"
   },
   "scripts": {
     "start": "netlify dev"
